--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
            <span class="logo_web">Web</span><span class="logo_studio_black ">Studio</span>
     </a>
     <ul class="site-nav list">
-        <li><a href="./index.html" class="link current">Студия</a></li>  
-        <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-        <li><a href="#" class="link">Контакты</a></li>
+        <li class="site-nav-item"><a href="./index.html" class="link current">Студия</a></li>  
+        <li class="site-nav-item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+        <li class="site-nav-item"><a href="#" class="link">Контакты</a></li>
     </ul>
 </nav>
     <ul class="site-contacts top list">
