--- a/portfolio.html
+++ b/portfolio.html
@@ -18,12 +18,11 @@
             <a href="./index.html" class="logo">
                 <span class="logo_web">Web</span><span class="logo_studio_black ">Studio</span>
             </a>
-            <ul class="site-nav list">
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                <li><a href="#" class="link">Контакты</a></li>
-            </ul>
-        </nav>
+    <ul class="site-nav list">
+        <li class="site-nav-item"><a href="./index.html" class="link">Студия</a></li>
+        <li class="site-nav-item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+        <li class="site-nav-item"><a href="#" class="link">Контакты</a></li>
+    </ul>
         <ul class="site-contacts top list">
             <li class="top-adress"><a href="mailto:info@devstudio.com" class="link contacts">
 
@@ -60,12 +59,15 @@
     <ul class="portfolio-project">
 
         <li class="item list">
-        <a href="#" class="portfolio-link">   
-        <img src="./images/web_site_technokriak.jpg" alt="Веб сайт Технокряк" width="370" height="294"/>
+            <a href="#" class="portfolio-link">
+        <div class="portfolio-img">
+            <img src="./images/web_site_technokriak.jpg" alt="Веб сайт Технокряк" width="370" height="294"/>
+        </div>
         <div class="portfolio-name">
             <h3 class="project">Технокряк</h3>
             <p>Веб сайт</p>
-        </div>  
+       
+        </div>
         </a>
         </li>
 
