finish edit before sent dz

--- a/index.html
+++ b/index.html
@@ -47,16 +47,20 @@
     <main>
 <!--Banner-->
 <section class="banner">
-<div class="container">
+<div class="container modal-block">
             <h1 class="section_title">Эффективные решения для вашего бизнеса</h1>
             <button data-modal-open class="button" type="button" >Заказать услугу</button>
-
             <div class="backdrop is-hidden" data-modal>
+        
                 <div class="modal">
 <p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum tempore rem quibusdam eos officiis in repellat! Iure libero tenetur exercitationem quod. Impedit aliquam fugiat illum, porro sint nulla fuga corrupti!
+
 </p>
-  <button data-modal-close>Закрыть</button>
+  <button class="button-close" data-modal-close>
+    <svg class="contacts-svg" width="8" height="30">
+        <use href="./images/symbol-defs.svg#icon-close"></use>
+    </svg>
+  </button>
     </div>
     </div>
 </div>
