--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 <body>
     <!--Header-->
 <header class="page-header">
-    <div class="container header-items">
+    <div class="container">
         <nav class="container-nav">
             <a href="./index.html" class="logo">
                 <span class="logo_web">Web</span><span class="logo_studio_black ">Studio</span>
@@ -23,6 +23,7 @@
         <li class="site-nav-item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
         <li class="site-nav-item"><a href="#" class="link">Контакты</a></li>
     </ul>
+    
         <ul class="site-contacts top list">
             <li class="top-adress"><a href="mailto:info@devstudio.com" class="link contacts">
 
@@ -56,24 +57,38 @@
     </ul>
 <!--Portfolio project-->
 
+
+
     <ul class="portfolio-project">
+
 
         <li class="item list">
             <a href="#" class="portfolio-link">
-        <div class="portfolio-img">
-            <img src="./images/web_site_technokriak.jpg" alt="Веб сайт Технокряк" width="370" height="294"/>
-        </div>
-        <div class="portfolio-name">
+             <div class="portfolio-class">
+                 <img src="./images/web_site_technokriak.jpg" alt="Веб сайт Технокряк" width="370" height="294"/>
+         <p class="text-action">
+        Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+        исчерпывающие сведения о компании или частном лице.
+         </p>
+            </div>  
+            <div class="portfolio-name">
             <h3 class="project">Технокряк</h3>
             <p>Веб сайт</p>
-       
         </div>
         </a>
         </li>
 
+
         <li class="item list">
         <a href="#" class="portfolio-link">
+            <div class="portfolio-class">
             <img src="./images/design_poster.jpg" alt="Дизайн Постер" width="370" height="294" />
+            <p class="text-action">
+             Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+             получить
+              исчерпывающие сведения о компании или частном лице.
+            </p>
+            </div>
             <div class="portfolio-name"><h3 class="project">Постер New Orlean vs Golden Star</h3>
             <p>Дизайн</p>
         </div>
@@ -82,7 +97,14 @@
 
         <li class="item list">
         <a href="#" class="portfolio-link">
+            <div class="portfolio-class">
             <img src="./images/app_restaurant.jpg" alt="Ресторан Seafood" width="370" height="294" />
+            <p class="text-action">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                получить
+                исчерпывающие сведения о компании или частном лице.
+            </p>
+            </div>
             <div class="portfolio-name"><h3 class="project">Ресторан Seafood</h3>
             <p>Приложение</p>
         </div>
@@ -91,7 +113,14 @@
 
         <li class="item list">
         <a href="#" class="portfolio-link">
+            <div class="portfolio-class">
             <img src="./images/marketing_project_prime.jpg" alt="Проект Prime" width="370" height="294" />
+            <p class="text-action">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                получить
+                исчерпывающие сведения о компании или частном лице.
+            </p>
+            </div>
             <div class="portfolio-name"><h3 class="project">Проект Prime</h3>
             <p>Маркетинг</p>
         </div>
@@ -100,7 +129,14 @@
 
         <li class="item list">
         <a href="#" class="portfolio-link">
+            <div class="portfolio-class">
             <img src="./images/app_project_boxes.jpg" alt="Проект Boxes" width="370" height="294" />
+            <p class="text-action">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                получить
+                исчерпывающие сведения о компании или частном лице.
+            </p>
+            </div>
             <div class="portfolio-name"><h3 class="project">Проект Boxes</h3>
             <p>Приложение</p>
         </div>
@@ -109,7 +145,14 @@
 
         <li class="item list">
         <a href="#" class="portfolio-link">
+            <div class="portfolio-class">
             <img src="./images/web_site_inspiration_has_no_borders.jpg" alt="Веб сайт Inspiration has not Borders" width="370" height="294" />
+            <p class="text-action">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                получить
+                исчерпывающие сведения о компании или частном лице.
+            </p>
+            </div>
             <div class="portfolio-name"><h3 class="project">Inspiration has no Borders</h3>
             <p>Веб сайт</p>
         </div>
@@ -118,15 +161,29 @@
 
         <li class="item list">
         <a href="#" class="portfolio-link">
+            <div class="portfolio-class">
             <img src="./images/design_edition_limited_edition.jpg" alt="Издание Limited Edition" width="370" height="294" />
+            <p class="text-action">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                получить
+                исчерпывающие сведения о компании или частном лице.
+            </p>
+            </div>
             <div class="portfolio-name"><h3 class="project">Издание Limited Edition</h3>
             <p>Дизайн</p>
         </div>
         </a>
         </li>
         <li class="item list">
-          <a href="#" class="portfolio-link">   
+          <a href="#" class="portfolio-link"> 
+            <div class="portfolio-class">
             <img src="./images/marketing_project_lab.jpg" alt="Проект LAB" width="370" height="294" />
+            <p class="text-action">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                получить
+                исчерпывающие сведения о компании или частном лице.
+            </p>
+            </div>
             <div class="portfolio-name"><h3 class="project">Проект LAB</h3>
             <p>Маркетинг</p>
         </div>
@@ -134,7 +191,14 @@
         </li>
         <li class="item list">
         <a href="#" class="portfolio-link">
+            <div class="portfolio-class">
             <img src="./images/app_growing_business.jpg" alt="Приложение Growing Business" width="370" height="294" />
+            <p class="text-action">
+                Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю
+                получить
+                исчерпывающие сведения о компании или частном лице.
+            </p>
+            </div>
             <div class="portfolio-name"><h3 class="project">Growing Business</h3>
             <p>Приложение</p>
         </div>
