--- a/index.html
+++ b/index.html
@@ -51,13 +51,11 @@
             <h1 class="section_title">Эффективные решения для вашего бизнеса</h1>
             <button data-modal-open class="button" type="button" >Заказать услугу</button>
             <div class="backdrop is-hidden" data-modal>
-        
                 <div class="modal">
 <p>
-
 </p>
   <button class="button-close" data-modal-close>
-    <svg class="contacts-svg" width="8" height="30">
+    <svg class="button-close-svg" width="30" height="30">
         <use href="./images/symbol-defs.svg#icon-close"></use>
     </svg>
   </button>
@@ -419,6 +417,6 @@
         </div>
     </div>
 </footer>
-<script src="./js/modal.js"></script>
+<script class="script-overlay" src="./js/modal.js"></script>
 </body>
 </html>
